After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758417 - Trying to destroy non-existent input chooser leads to a CRITICAL
Trying to destroy non-existent input chooser leads to a CRITICAL
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Region & Language
3.18.x
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-20 17:47 UTC by Debarshi Ray
Modified: 2015-11-23 10:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
region: Silence a CRITICAL (959 bytes, patch)
2015-11-20 17:52 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-11-20 17:47:00 UTC
Opening and closing the region panel without opening the input chooser will get you this:
  Gtk-CRITICAL **: gtk_widget_destroy: assertion 'GTK_IS_WIDGET (widget)' failed
Comment 1 Debarshi Ray 2015-11-20 17:48:07 UTC
Fall out from:

commit abb0592866515ac43ed1ac3c9ecc0b229960011f
Author: Joaquim Rocha <me@joaquimrocha.com>
Date:   Thu Feb 26 22:10:40 2015 +0100

    region: Reuse the input chooser instance
    
    The language input chooser is being created and destroyed every time
    it is opened and closed. This is noticeably slow and is hardly
    necessary as the values it contains should not change.
    
    To fix this, these changes reuse the same instance of the input chooser
    (by hiding and showing it) instead of renewing it.
    The input chooser is also now shown using gtk_dialog_run to avoid having
    it destroyed from the default delete event.
Comment 2 Debarshi Ray 2015-11-20 17:52:01 UTC
Created attachment 315984 [details] [review]
region: Silence a CRITICAL
Comment 3 Rui Matos 2015-11-20 17:56:32 UTC
Review of attachment 315984 [details] [review]:

I don't remember this happening before, but I see it now too. Looks good
Comment 4 Debarshi Ray 2015-11-23 10:43:25 UTC
Comment on attachment 315984 [details] [review]
region: Silence a CRITICAL

Pushed to master, gnome-3-18, gnome-3-16 and gnome-3-14.