region: Silence a CRITICAL

Fall out from abb0592866515ac43ed1ac3c9ecc0b229960011f

https://bugzilla.gnome.org/show_bug.cgi?id=758417